src/scss/includes/_about.scss
#about {
    background-color: $bg-base;
    padding: 0;
    text-align: center;
    .container-fluid {
        padding: 0 0.5rem;
        img {
            position: relative;
            left: -0.5rem;
            right: 0.5rem;
            top: 0;
            bottom: 0;
        }

        .icon{
            padding: 1rem;
        }
    }
    .about-entry{
        padding: 0.5rem 0;
    }
}

